# botmaid-rs

./: Cargo.toml
src/: lib.rs
src/api/: cli.rs  mock.rs  mod.rs  onebot_11.rs  telegram.rs
